# SuPyMode

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeCache.txt  CMakeLists.txt  Code.html  Examples.html  LICENSE  MANIFEST.in  MakeWheel.sh  Makefile  README.md  README.rst  References.html  SuPyModes.ipynb  Theory.html  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  cmake_install.cmake  code.html  data.json  endpoint.json  genindex.html  index.html  install_manifest.txt  meta.yaml  notebook.ipynb  objects.inv  pyproject.toml  pytest.ini  references.html  requirements-dev.txt  requirements-development.txt  (+12 more)
.doctrees/: code.doctree  environment.pickle  index.doctree  references.doctree  sg_execution_times.doctree  theory.doctree
.doctrees/gallery/: index.doctree  sg_execution_times.doctree
.github/workflows/: build_macos_arm64.yml  build_macos_x86_64.yml  build_manylinux_arm64.yml  build_manylinux_x86_64.yml  build_windows_x86_64.yml  coverage.yml  deploy_PyPi.yml  deploy_anaconda.yml  deploy_documentation.yml  deploy_workflow.yml  sub_deploy_coverage_badge.yml  sub_deploy_documentation.yml  sub_deploy_pypi.yml
CMAKES/: CMakeLists_old.txt  EigenSolver.cmake  Meta.cmake  Prefix.cmake  Utils.cmake
Docker/: Dockerfile  docker-compose.yml  requirements.txt
ExamplesGallery/: Example1.html  Example2.html  Example3.html  Example4.html  Example5.html  index.html
Perso/: ABAB.py  HybridMSPL7x1_Centered.py  InstallBoostMing32  SemiSpecificPhotonicLantern.py
SuPyMode/: BaseClass.py  Directories.py  Geometry.py  Materials.py  Solver.py  Special.py  SuperMode.py  SuperPosition.py  SuperSet.py  __init__.py  _supermode.py  _version.py  directories.py  fibers.py  helper.py  mode_label.py  plotter.py  profiles.py  propagation.py  representations.py  sellmeier.py  slice_structure.py  solver.py  special.py  supermode.py  superset.py  superset_plots.py  symmetries.py  utils.py  workflow.py
SuPyMode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SuPyMode/Plotting/: Plots.py  PlotsUtils.py  Plots_.py
SuPyMode/Tools/: BaseClass.py  Config.py  Directories.py  ShapelyUtils.py  Special.py  utils.py
SuPyMode/cpp/: eigensolver_interface.cpp  mesh.cpp  model_parameters_interface.cpp  supermode_interface.cpp
SuPyMode/cpp/eigensolver/: CMakeLists.txt  eigensolver.cpp  eigensolver.h  interface.cpp  mode_labeler.h
SuPyMode/cpp/mesh/: CMakeLists.txt  interface.cpp  mesh.cpp  mesh.h
SuPyMode/includes/: Definitions.cpp  EigenSolver.cpp  Extrapolate.hpp  FinitCoefficient.hpp  Laplacian.cpp  SuperMode.cpp  class.cpp  class.hpp  interface.cpp  utils.cpp
SuPyMode/representation/: __init__.py  adiabatic.py  base.py  beating_length.py  beta.py  eigen_value.py  field.py  index.py  normalized_coupling.py  overlap.py
SuPyModes/: BaseClass.py  Config.py  Directories.py  Geometry.py  Processing.py  Solver.py  Special.py  SuperMode.py  Untitled.ipynb  _Solver.py  fibers.py  utils.py
SuPyModes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SuPyModes/includes/: CMakeLists.txt  EigenSolver.cp38-win_amd64.pyd  Extrapolate.hpp  FinitCoefficient.hpp  Laplacian.cpp  class.cpp  class.hpp  class_.cpp  interface.cpp  test.py  utils.cpp
Tests/: Unittest.py  perso.py
_sources/: Code.rst.txt  Examples.rst.txt  References.rst.txt  Theory.rst.txt  code.rst.txt  index.rst.txt  sg_execution_times.rst.txt  theory.rst.txt
_static/: default.css
development/: _test_propagation.py  rodrigo_estupido_3.py  validation_2.py
developments/: _test_propagation.py  gradient_tests_2.py  pydantic_test.py  rodrigo_estupido_3.py  validation.py
docs/: requirements.txt
examples/: 1x1SMF28.py  2x2Coupler.py  2x2SMF28.py  3x3Coupler.py  3x3SMF28.py  4x4Coupler.py  4x4SMF28.py  Adiabatic:1x1Coupler.py  Adiabatic:2x2Coupler.py  Adiabatic:3x3Coupler.py  Adiabatic:4x4Coupler.py  Benchmark.py  Coupling:1x1Coupler.py  Coupling:2x2Coupler.py  Coupling:3x3Coupler.py  Coupling:4x4Coupler.py  Full2x2Coupler.py  Full2x2SMF28.py  Full3x3Coupler.py  Full4x4Coupler.py  Full:1x1Coupler.py  Full:2x2Coupler.py  Full:3x3Coupler.py  Full:4x4Coupler.py  Geometry1x1Coupler.py  Geometry3x3Coupler.py  Geometry4x4Coupler.py  Geometry:1x1Coupler.py  Geometry:2x2Coupler.py  Geometry:3x3Coupler.py  Geometry:4x4Coupler.py  Index:1x1Coupler.py  Index:2x2Coupler.py  Index:3x3Coupler.py  Index:4x4Coupler.py  LinearCombination.py  Propagate:4x4Coupler.py  test.py
gallery/: index.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6fb7a612281ca84c_special_py.html  z_6fb7a612281ca84c_utils_py.html  z_8efdf6575ab486bf_adiabatic_py.html  z_8efdf6575ab486bf_base_py.html  z_8efdf6575ab486bf_beating_length_py.html  z_8efdf6575ab486bf_beta_py.html  z_8efdf6575ab486bf_eigen_value_py.html  z_8efdf6575ab486bf_field_py.html  z_8efdf6575ab486bf_index_py.html  z_8efdf6575ab486bf_normalized_coupling_py.html  z_90f50aa8da0844fc_helper_py.html  z_90f50aa8da0844fc_mode_label_py.html  z_90f50aa8da0844fc_plotter_py.html  z_90f50aa8da0844fc_profiles_py.html  z_90f50aa8da0844fc_propagation_py.html  z_90f50aa8da0844fc_solver_py.html  z_90f50aa8da0844fc_special_py.html  z_90f50aa8da0844fc_supermode_py.html  z_90f50aa8da0844fc_superset_plots_py.html  z_90f50aa8da0844fc_superset_py.html  z_90f50aa8da0844fc_utils_py.html  z_90f50aa8da0844fc_workflow_py.html
perso/: 3x3DoubleClad.py  test.py  test1.py
recipes/: 2fused02.json  2fusedSMF28.json  2fusedSMF405.json  SMF28.json  Testing.json  WIC.json
requirements/: requirements-development.txt  requirements-documentation.txt  requirements-testing.txt  requirements-validation.txt  requirements.txt
temp/: Makefile
test/: test0.py
tests/: test_api.py  test_fused.py  test_gradient.py  test_mode_label.py  test_plots.py  test_profile.py  test_propagation.py  test_symmetry.py  test_validation.py  test_validation_index.py  test_validation_normalized_coupling.py  test_validation_propagation_constant.py  test_validation_symmetry.py  test_workflow.py
(+1478 files in other folders)
