[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "numpy", "pybind11"]
build-backend = "setuptools.build_meta"



[tool.cibuildwheel]
before-build = "cmake . && make install && ls src/SuPyMode/bin"
build-frontend = "pip"
build-verbosity = "1"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
