[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["SuPyMode/cpp"]
install.strip = false
sdist.include = ["SuPyMode/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]
write_to = "SuPyMode/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "SuPyMode"
dynamic = ["version"]
description = "A package for light propagation in fiber optics."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.11"
authors = [{ name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Physics',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]
keywords = [
    "coupled-mode theory",
    "waveguide",
]
dependencies = [
    "setuptools_scm[toml]>=8.0",
    "numpy==2.2.4",
    "scipy==1.15.2",
    "MPSPlots==1.6.2",
    "pydantic==2.11.3",
    "PyFinitDiff==2.1.6",
    "FiberFusing==1.7.0",
    "PyFiberModes==0.7.4",
    "pathvalidate==3.2.3",
]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report ==1.5.0",
    "coverage==7.6.10"
]

documentation = [
    "PyFiberModes",
    "numpydoc ==1.8.0",
    "sphinx >=5.1.1",
    "sphinx-gallery ==0.18.0",
    "sphinx-rtd-theme ==3.0.2",
    "pydata-sphinx-theme ==0.16.0",
]

dev = [
    "flake8 ==7.1.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
addopts = [
    "-v", "-rA", "-rw", "--cov=SuPyMode", "--cov-report=html", "--cov-report=term"
]
testpaths = [
    "tests/*",
]


[tool.cibuildwheel]
build-frontend = "build"
before-test = ""
test-command = "python -m pytest -rA {project}/tests"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp310-manylinux*", "cp311-manylinux*", "cp312-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp310-*", "cp311-*", "cp312-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp310-*", "cp311-*", "cp312-*"]

[tool.coverage.run]
source = ['SuPyMode']
omit = [
    '*\__init__.py',
    'SuPyMode/_version.py',
    'SuPyMode/directories.py',
    'SuPyMode/tools/special.py',
    'SuPyMode/tools/utils.py',
    'SuPyMode/special.py'
]
branch = true
relative_files = true