[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = ".skbuild/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["SuPyMode/cpp"]
install.strip = false
sdist.include = ["SuPyMode/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]

write_to = "SuPyMode/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "SuPyMode"
dynamic = ["version"]
description = "A package for light propagation in fiber optics."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.11"
authors = [{ name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Physics',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]

dependencies = [
    "setuptools_scm[toml]>=8.0",
    "numpy>=2.0.0",
    # "scipy",
    "MPSPlots",
    "pydantic",
    "PyFinitDiff",
    "FiberFusing",
    "pyvista",
    "PyFiberModes",
    "pathvalidate",
]

keywords = [
    "coupled-mode theory",
    "waveguide",
]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "coverage==7.13.2",
]
documentation = [
    "PyFiberModes",
    "numpydoc==1.10.0",
    "sphinx>=5.1.1",
    "sphinx-rtd-theme==3.1.0",
    "sphinx-gallery==0.20.0",
    "sphinx_design==0.6.1",
    "pydata-sphinx-theme==0.16.1"
]
dev = [
    "flake8==7.3.0"
]

[tool.coverage.run]
source = ['SuPyMode']
omit = [
    '*\__init__.py',
    'SuPyMode/_version.py',
    'SuPyMode/directories.py',
    'SuPyMode/tools/special.py',
    'SuPyMode/tools/utils.py',
    'SuPyMode/special.py'
]
branch = true
relative_files = true

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp311-manylinux*", "cp312-manylinux*", "cp313-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
test-command = "cd {project}; python -m pytest --config-file=pytest.ini --ignore=tests/extra/test_system_plot.py --ignore=tests/single/representation.py"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"  # --exclude=libomp.dylib
test-command = 'cd {project}; python -m pytest --config-file=pytest.ini'  # DYLD_PRINT_LIBRARIES=NO

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
test-command = 'cd /d {project} && python -m pytest --config-file=pytest.ini'
