[metadata]
name = SuPyMode
description = A package for light propagation in fiber optics.
version = file: SuPyMode/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/SuPyMode
license = MIT
license_files = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics


[options]
include_package_data = True
packages = find:
python_requires >= 3.10

setup_requires =
        setuptools
        numpy
        wheel

install_requires =
        MPSPlots
        PyFinitDiff
        FiberFusing
        numpy
        scipy
        matplotlib

[sdist]
formats = zip, gztar

[options.extras_require]
dev =
        MPSPlots
        PyFinitDiff
        FiberFusing
        setuptools
        wheel
        numpy
        scipy
        pyvista
        matplotlib
        Jinja2==3.1.2
        numpydoc==1.5.0
        Sphinx==5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        mypy>=0.910
        flake8>=3.9
        tox>=3.24
        coverage

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore =
    W605

[options.packages.find]
exclude =
    Lib
    extern
    docs
    tests

include =
        SuPyMode