[metadata]
name = SuPyMode
description = A package for light propagation in fiber optics.
version = file: SuPyMode/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/SuPyMode
license = MIT
license_files = LICENSE
readme = README.rst
Documentation = https://supymodes.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research


[options]
include_package_data = True
packages = find:
python_requires >= 3.10
install_requires = file: requirements/requirements.txt
setup_requires =
    setuptools>=40.6.0
    numpy
    wheel

[options.packages.find]
exclude =
    extern
    docs
    tests

[options.extras_require]
development = file: requirements/requirements-development.txt
documentation = file: requirements/requirements-documentation.txt
testing = file: requirements/requirements-testing.txt

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = SuPyMode
omit =
    SuPyMode/__debug__.py
    SuPyMode/tools/special.py
    SuPyMode/python_debuging/*

[sdist]
formats = zip, gztar
