[metadata]
name = SuPyMode
description = A package for light propagation in fiber optics.
version = file: SuPyMode/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/SuPyMode
license = MIT
license_files = LICENSE
readme = README.rst
Documentation = https://supymodes.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research


[options]
packages = find_namespace:
include_package_data = True
python_requires >= 3.11

setup_requires =
    setuptools>=44.0.0
    numpy==1.25.2

install_requires =
    MPSPlots==1.3.19
    PyFinitDiff==1.1.2
    FiberFusing==1.0.16
    scipy==1.11.3
    matplotlib==3.7.2
    pathvalidate==3.2.0


[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1
    PyFiberModes==0.2.39

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0
    PyFiberModes==0.2.39

[options.packages.find]
exclude =
    extern
    docs
    tests

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = SuPyMode
omit =
    SuPyMode/__debug__.py
    SuPyMode/tools/special.py
    SuPyMode/python_debuging/*

[sdist]
formats = zip, gztar
